фронт на чорнову готовий

--- a/app/client/modules/chat/chat.pug
+++ b/app/client/modules/chat/chat.pug
@@ -18,7 +18,7 @@
 //-         i.ico &#x4e;
 //-         i.ico &#x4e;
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
 //-     .logo
 //-       p.logo__name
 //-       img.logo__img(src="../path/to/image")
@@ -41,7 +41,7 @@
         i.ico &#x4e;
         i.ico &#x4e;
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -49,7 +49,7 @@
       .chat-list__message-text polyalcohol autodigestive nanga dummyism rougemontite
       .chat-list__message-date 22.54
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -70,7 +70,7 @@
 //- 
 //-   li.chat-list__item.chat-list__item_date 13.03.2021, сб
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -102,7 +102,7 @@
 //- 
 //-   li.chat-list__item.chat-list__item_date 15.03.2021, пн
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -121,7 +121,7 @@
         i.ico &#x4e;
         i.ico &#x4e;
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -151,7 +151,7 @@
         i.ico &#x4e;
         i.ico &#x4e;
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -161,7 +161,7 @@
 //- 
 //-   li.chat-list__item.chat-list__item_date 16.03.2021, вв
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -169,7 +169,7 @@
       .chat-list__message-text malik ozonoscope autogenetically asaron parallelepiped conepate plastomere effeteness scream Gobiesocidae premisrepresent Aeolian hawok decimate muscular sciolous assize tyrology zeunerite Leuciferidae tachometer unmirthfully subungual Silicoflagellidae
       .chat-list__message-date 04.43
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -188,7 +188,7 @@
         i.ico &#x4e;
         i.ico &#x4e;
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -218,7 +218,7 @@
         i.ico &#x4e;
         i.ico &#x4e;
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -226,7 +226,7 @@
       .chat-list__message-text epigonal sanguinaceous acceleration carbamate neritic aperitive Weissnichtwo galleyman marksmanly
       .chat-list__message-date 13.09
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -234,7 +234,7 @@
       .chat-list__message-text otogenous
       .chat-list__message-date 13.32
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -242,7 +242,7 @@
       .chat-list__message-text flotage  rapscallionly suprahepatic rotacism reverentially orthocephaly sclerotiniose matinal trabeculation apostemation lanum
       .chat-list__message-date 14.31
 //- 
-//-   li.chat-list__item.chat-list__item_received
+//-   li.chat-list__item.chat-list__item_received(data-id="")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -286,7 +286,7 @@ ul.chat-list.chat-list_group
         i.ico &#x4e;
         i.ico &#x4e;
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="euCsBj")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -294,7 +294,7 @@ ul.chat-list.chat-list_group
       .chat-list__message-text polyalcohol autodigestive nanga dummyism rougemontite
       .chat-list__message-date 22.54
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="9LMNH")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user2.jpg")
@@ -315,7 +315,7 @@ ul.chat-list.chat-list_group
 
   li.chat-list__item.chat-list__item_date 13.03.2021, сб
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="qiRltf2ISgDW06dJtcq")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user3.jpg")
@@ -347,7 +347,7 @@ ul.chat-list.chat-list_group
 
   li.chat-list__item.chat-list__item_date 15.03.2021, пн
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="wTjf7kMtN2X5vaG")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user4.jpg")
@@ -366,7 +366,7 @@ ul.chat-list.chat-list_group
         i.ico &#x4e;
         i.ico &#x4e;
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="JzJW1MCsdu")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user1.jpg")
@@ -396,7 +396,7 @@ ul.chat-list.chat-list_group
         i.ico &#x4e;
         i.ico &#x4e;
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="aAi0s")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user2.jpg")
@@ -406,7 +406,7 @@ ul.chat-list.chat-list_group
 
   li.chat-list__item.chat-list__item_date 16.03.2021, вв
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="xxSzeoMS2way5e")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user15.jpg")
@@ -414,7 +414,7 @@ ul.chat-list.chat-list_group
       .chat-list__message-text malik ozonoscope autogenetically asaron parallelepiped conepate plastomere effeteness scream Gobiesocidae premisrepresent Aeolian hawok decimate muscular sciolous assize tyrology zeunerite Leuciferidae tachometer unmirthfully subungual Silicoflagellidae
       .chat-list__message-date 04.43
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="SGslxTy4zqp1waV0uu")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user8.jpg")
@@ -433,7 +433,7 @@ ul.chat-list.chat-list_group
         i.ico &#x4e;
         i.ico &#x4e;
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="AZByTwQBTkmEeNglY")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user9.jpg")
@@ -463,7 +463,7 @@ ul.chat-list.chat-list_group
         i.ico &#x4e;
         i.ico &#x4e;
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="85T3aT9")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user10.jpg")
@@ -471,7 +471,7 @@ ul.chat-list.chat-list_group
       .chat-list__message-text epigonal sanguinaceous acceleration carbamate neritic aperitive Weissnichtwo galleyman marksmanly
       .chat-list__message-date 13.09
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="V4pNr2joHkjChJCEkuj")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user10.jpg")
@@ -479,7 +479,7 @@ ul.chat-list.chat-list_group
       .chat-list__message-text otogenous
       .chat-list__message-date 13.32
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="jfT76fS789")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user16.jpg")
@@ -487,7 +487,7 @@ ul.chat-list.chat-list_group
       .chat-list__message-text flotage  rapscallionly suprahepatic rotacism reverentially orthocephaly sclerotiniose matinal trabeculation apostemation lanum
       .chat-list__message-date 14.31
 
-  li.chat-list__item.chat-list__item_received
+  li.chat-list__item.chat-list__item_received(data-id="e3sz01kvi0O8oMCG5")
     .logo
       p.logo__name
       img.logo__img(src="../img/users/user19.jpg")
