--- a/app/client/modules/chat/chat.scss
+++ b/app/client/modules/chat/chat.scss
@@ -30,6 +30,9 @@
         background-color             : lightskyblue;
         border-bottom-left-radius    : 0 0;
       }
+      .logo {
+        cursor                       : pointer;
+      }
     }
   }
   &__message {
