--- a/app/client/modules/chatlist/chatlist.pug
+++ b/app/client/modules/chatlist/chatlist.pug
@@ -1,6 +1,6 @@
 ul.chat-list
 
-  li.chat-item
+  li.chat-item(data-group="true" data-id="5VU7eo75wjabFQ3608")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user1.jpg")
@@ -14,7 +14,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="KTBnbVgJf1xjgv32ELg")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user2.jpg")
@@ -28,7 +28,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="EQA0BYyZq2928fNSXZ")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user3.jpg")
@@ -42,7 +42,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="mBfbmrkybY2GiQtF8a")
     .logo
       p.logo__name MG
       //- img.logo__img(src="../img/users/user4.jpg")
@@ -56,7 +56,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="ZNeoR917Jb")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user5.jpg")
@@ -70,7 +70,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="h7ev6ixZVj11Pw2jXa")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user6.jpg")
@@ -84,7 +84,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="ESjNUAig64")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user7.jpg")
@@ -98,7 +98,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="vVnuWTV4JJPqf6J32su")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user8.jpg")
@@ -112,7 +112,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="zyTln1JkbjIA")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user9.jpg")
@@ -126,7 +126,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="HHwdOBD69cv9IWRhBPi")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user10.jpg")
@@ -140,7 +140,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="zpa5LmJshzm")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user11.jpg")
@@ -154,7 +154,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="IsaEAu")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user12.jpg")
@@ -168,7 +168,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="UNA")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user13.jpg")
@@ -182,7 +182,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="9gaQ9Ve0lIu")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user14.jpg")
@@ -196,7 +196,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="tpL170rvq7C2Imu")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user15.jpg")
@@ -210,7 +210,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="X3RAMmM3nOA")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user16.jpg")
@@ -224,7 +224,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="wo2H4BLyxm2uENb3A")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user17.jpg")
@@ -238,7 +238,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="U6KmxWbvGf")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user18.jpg")
@@ -252,7 +252,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="QJKicJhV3PJdKHu9j")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user19.jpg")
@@ -266,7 +266,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="WwsJfByOTNmSJY9U")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user20.jpg")
@@ -280,7 +280,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="2OZkehT2F77")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user21.jpg")
@@ -294,7 +294,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="D7TzVbWv")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user22.jpg")
@@ -308,7 +308,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="cbEMS")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user23.jpg")
@@ -322,7 +322,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="lN1Ph")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user24.jpg")
@@ -336,7 +336,7 @@ ul.chat-list
       i.ico &#x4e;
       i.ico &#x4e;
 
-  li.chat-item
+  li.chat-item(data-id="8paaUBZOUC97Rl6e9HeQ")
     .logo
       p.logo__name CN
       img.logo__img(src="../img/users/user25.jpg")
