--- a/app/client/modules/chatlist/chatlist.scss
+++ b/app/client/modules/chatlist/chatlist.scss
@@ -11,6 +11,7 @@
   overflow: hidden;
   position: relative;
   cursor: pointer;
+  padding: 3px;
   &__text-wrapper {
     color: $d0;
     border-bottom: 1px solid $cb;
