--- a/app/client/modules/contactlist/contactlist.pug
+++ b/app/client/modules/contactlist/contactlist.pug
@@ -1,241 +1,241 @@
 ul.contact-list
 
-  li.contact-item
+  li.contact-item(data-id="ELqbedghwM7mgMuJ")
     .logo
       p.logo__name JW
       img.logo__img(src="../img/users/user1.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Jean Waverly
 
-  li.contact-item
+  li.contact-item(data-id='xbskAl4rS')
     .logo
       p.logo__name RT
       img.logo__img(src="../img/users/user2.jpg")
       .logo__status.logo__status_online
     .contact-item__name Remedios Thornberg
 
-  li.contact-item
+  li.contact-item(data-id="ELqbewM7mgMuJ")
     .logo
       p.logo__name SZ
       img.logo__img(src="../img/users/user3.jpg")
       .logo__status.logo__status_online
     .contact-item__name Shenita Zema
 
-  li.contact-item
+  li.contact-item(data-id="idYc3vNngWwkY")
     .logo
       p.logo__name GK
       img.logo__img(src="../img/users/user4.jpg")
       .logo__status.logo__status_online
     .contact-item__name Gretta Krejcik
 
-  li.contact-item
+  li.contact-item(data-id="Idjl6MRTgyC")
     .logo
       p.logo__name SM
       img.logo__img(src="../img/users/user5.jpg")
       .logo__status.logo__status_online
     .contact-item__name Sharron Mellish
 
-  li.contact-item
+  li.contact-item(data-id="Z0En7CSaqx")
     .logo
       p.logo__name OO
       img.logo__img(src="../img/users/user6.jpg")
       .logo__status.logo__status_online
     .contact-item__name Ollie Orellama
 
-  li.contact-item
+  li.contact-item(data-id="pTyqDvBO0OPZqXeanuWi")
     .logo
       p.logo__name AG
       img.logo__img(src="../img/users/user7.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Arron Gwillim
 
-  li.contact-item
+  li.contact-item(data-id="m1eI2L5mi4DjAw1fM8V")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user8.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Jannette Kutz
 
-  li.contact-item
+  li.contact-item(data-id="fN4YA4oD39LExqspTR")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user9.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Elly Tonner
 
-  li.contact-item
+  li.contact-item(data-id="dnF6bH5rmu")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user10.jpg")
       .logo__status.logo__status_online
     .contact-item__name Marlin Potanovic
 
-  li.contact-item
+  li.contact-item(data-id="BkYX4HQ14XJTRVq")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user11.jpg")
       .logo__status.logo__status_online
     .contact-item__name Jeannie Fay
 
-  li.contact-item
+  li.contact-item(data-id="BCHo9WmozTLtMbMhW")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user12.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Allen Knotek
 
-  li.contact-item
+  li.contact-item(data-id="ufLAA6CoHpnoSrF")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user13.jpg")
       .logo__status.logo__status_online
     .contact-item__name Lia Kusterer
 
-  li.contact-item
+  li.contact-item(data-id="wHOks8GRQVEC2H0A")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user14.jpg")
       .logo__status.logo__status_online
     .contact-item__name Jennie Duryee
 
-  li.contact-item
+  li.contact-item(data-id="MZjd3gkTI53")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user15.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Leanna Baugher
 
-  li.contact-item
+  li.contact-item(data-id="VDaiNty0A")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user16.jpg")
       .logo__status.logo__status_online
     .contact-item__name Jose Casanova
 
-  li.contact-item
+  li.contact-item(data-id="x5YTBl")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user17.jpg")
       .logo__status.logo__status_online
     .contact-item__name Vonda Winterfeldt
 
-  li.contact-item
+  li.contact-item(data-id="EAAYmJ8cFUH1aw1")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user18.jpg")
       .logo__status.logo__status_online
     .contact-item__name Albertha Tibor
 
-  li.contact-item
+  li.contact-item(data-id="hkEVLrjfTVjorsumTz")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user19.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Pedro Zammetti
 
-  li.contact-item
+  li.contact-item(data-id="meHwrpBy94pC3w")
     .logo
       p.logo__name AB
       img.logo__img(src="../img/users/user20.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Clementina Maggert
 
-  li.contact-item
+  li.contact-item(data-id="qTK9Kv2Cy3fMUgKzCl")
     .logo
       p.logo__name CC
       img.logo__img(src="../img/users/user21.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Casey Colleen
 
-  li.contact-item
+  li.contact-item(data-id="KhRm3Lz55hODu4lMd")
     .logo
       p.logo__name TS
       img.logo__img(src="../img/users/user22.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Temple Siglin
 
-  li.contact-item
+  li.contact-item(data-id="wXyvWDYlhFn0yP51G")
     .logo
       p.logo__name JS
       img.logo__img(src="../img/users/user23.jpg")
       .logo__status.logo__status_online
     .contact-item__name Johana Stiegler
 
-  li.contact-item
+  li.contact-item(data-id="jFWyPg2jQUAQv8h")
     .logo
       p.logo__name AS
       img.logo__img(src="../img/users/user24.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Alana Solwold
 
-  li.contact-item
+  li.contact-item(data-id="iZxGenJ2DJPHb")
     .logo
       p.logo__name FS
       img.logo__img(src="../img/users/user25.jpg")
       .logo__status.logo__status_offline
     .contact-item__name Fabian Sanft
 
-  li.contact-item
+  li.contact-item(data-id="8MIPHgdkyh")
     .logo
       p.logo__name CB
       .logo__status.logo__status_online
     .contact-item__name Clara Bramhall
 
-  li.contact-item
+  li.contact-item(data-id="ctdFTzFVcyKNRwSxZVfM")
     .logo
       p.logo__name CM
       .logo__status.logo__status_online
     .contact-item__name Catalina Meeter
 
-  li.contact-item
+  li.contact-item(data-id="2CMS3cPmCGp1D0G")
     .logo
       p.logo__name KW
       .logo__status.logo__status_online
     .contact-item__name Kristina Warmoth
 
-  li.contact-item
+  li.contact-item(data-id="b9BkLz7")
     .logo
       p.logo__name JS
       .logo__status.logo__status_offline
     .contact-item__name Jeanna Strand
 
-  li.contact-item
+  li.contact-item(data-id="AgGo5Qs4QkfGCZ5C5")
     .logo
       p.logo__name HM
       .logo__status.logo__status_online
     .contact-item__name Harriett Moneypenny
 
-  li.contact-item
+  li.contact-item(data-id="aZlqAc4mixgi3c")
     .logo
       p.logo__name AG
       .logo__status.logo__status_online
     .contact-item__name Antoine Grygiel
 
-  li.contact-item
+  li.contact-item(data-id="TJby9CmE8S6e31qGRV")
     .logo
       p.logo__name TB
       .logo__status.logo__status_offline
     .contact-item__name Tabetha Benion
 
-  li.contact-item
+  li.contact-item(data-id="2Gr5EA")
     .logo
       p.logo__name AH
       .logo__status.logo__status_offline
     .contact-item__name Armando Hakimi
 
-  li.contact-item
+  li.contact-item(data-id="pJgEkYviJQWg7")
     .logo
       p.logo__name MR
       .logo__status.logo__status_online
     .contact-item__name Myrtle Remaley
 
-  li.contact-item
+  li.contact-item(data-id="LYN")
     .logo
       p.logo__name MA
       .logo__status.logo__status_online
     .contact-item__name Maxima Angeline
 
-  li.contact-item
+  li.contact-item(data-id="x2B")
     .logo
       p.logo__name MS
       .logo__status.logo__status_online
