--- a/app/client/modules/subheader/subheader.pug
+++ b/app/client/modules/subheader/subheader.pug
@@ -1,4 +1,4 @@
-.subheader
+.subheader(data-id="6gvxcVu6DWcbMZ98UAAh" data-group="true")
   .logo
     p.logo__name UN
     img.logo__img(src="../img/users/user4.jpg")
