--- a/app/client/modules/usercard/usercard.pug
+++ b/app/client/modules/usercard/usercard.pug
@@ -19,4 +19,4 @@ ul.card-menu
   li
     button(type="button" data-role="showClearHistory") очистити історію
 
-button(type="button").round-btn: i.ico &#x6a;
+button(type="button" data-group="false" data-id="3tVc").round-btn: i.ico &#x6a;
