--- a/app/client/modules/contactlist/contactlist.scss
+++ b/app/client/modules/contactlist/contactlist.scss
@@ -4,10 +4,12 @@
   cursor: pointer;
   overflow: hidden;
   position: relative;
+  padding: 3px;
   &__name {
     color: $d0;
     border-bottom: 1px solid $cb;
     padding: 5px;
+    padding-top: 10px;
     flex-grow: 1;
     width: calc(100% - 100px);
     height: 50px;
