--- a/app/client/modules/groupcard/groupcard.pug
+++ b/app/client/modules/groupcard/groupcard.pug
@@ -20,4 +20,4 @@ ul.card-menu
   li
     button(type="button" data-role="showClearHistory") очистити історію
 
-button(type="button").round-btn: i.ico &#x6a;
+button(type="button" data-group="true" data-id="3tVc").round-btn: i.ico &#x6a;
