--- a/app/client/scss/login.scss
+++ b/app/client/scss/login.scss
@@ -37,8 +37,8 @@
       text-decoration: none;
       cursor: pointer;
       &:hover {
-      color: $c64;
-      text-decoration: none;
+        color: $c64;
+        text-decoration: none;
       }
     }
   }
@@ -54,7 +54,7 @@
   font: 14px reg;
   cursor: pointer;
   border: 1px solid transparent;
-  &:hover {
+  &_active {
     border: 1px solid black;
     background-color: rgba(0,0,0,.5);
     .lang-switcher__list {
