--- a/app/client/pug/login.pug
+++ b/app/client/pug/login.pug
@@ -5,7 +5,8 @@ html(lang='ua').wjs-MobileHeightFix
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet' type='text/css' href='../css/main.css')
     link(rel='icon', href='../img/logo.png')
-    script(src="../js/login.js")
+    script(defer src='../libs-js/wScroll.js')
+    script(defer src="../js/login.js")
     title Login
   body
     .body-inner.body-inner_notSignedPage
@@ -31,16 +32,36 @@ html(lang='ua').wjs-MobileHeightFix
                 img.lang-switcher__img(src="../img/united_kingdom.png")
               span.lang-switcher__name eng
       main.login-main
-        h1 My-cha-cha
-        h4(data-translate="h4") вільний веб-чат
-        h5(data-translate="h51") щоб увійти, введіть пароль і логін
-        h5(data-translate="h52" style="display: none") щоб почати користуватися чатом, пройдіть реєстрацію
+        .login-main__inner.wjs-scroll(data-scroll='right' data-scroll-hidden="horizontal")
+          .wjs-scroll__content-wrapper
+            .wjs-scroll__content
+              h1 My-cha-cha
+              h4(data-translate="h4") вільний веб-чат
+              h5(data-translate="h51") щоб увійти, введіть пароль і логін
+              h5(data-translate="h52" style="display: none") щоб почати користуватися чатом, пройдіть реєстрацію
 
-        form(name="loginForm" method="post" action="/login")
-          input(name="lang" type="hidden" value="ua")
-          input(name="name" type="name" placeholder="логін…")
-          input(name="pass1" type="password" placeholder="пароль…")
-          input(name="pass2" type="password" placeholder="повторіть пароль…" style="display: none")
-          button(type="submit" data-translate="btn") увійти
+              form(name="loginForm" method="post" action="api/login")
+                input(name="lang" type="hidden" value="ua")
+                input(name="name" type="name" placeholder="логін…")
+                .error-info
+                  i.ico &#x73;
+                  span
+                    //- Введіть логін
+                    //- Довжина логіну не менше 3х символів
+                    //- сервер: Такого користувача не існує
+                input(name="pass1" type="password" placeholder="пароль…")
+                .error-info
+                  i.ico &#x73;
+                  span
+                    //- Введіть пароль
+                    //- Пароль повинен бути щонайменше 6 символів
+                    //- сервер: Не вірний пароль
+                input(name="pass2" type="password" placeholder="повторіть пароль…" style="display: none")
+                .error-info
+                  i.ico &#x73;
+                  span
+                    //- Повторіть пароль
+                    //- Паролі не співпадають
+                button(type="submit" data-translate="btn") увійти
 
       footer.login-footer © waldteufel@ukr.net
