--- a/app/client/pug/login.pug
+++ b/app/client/pug/login.pug
@@ -7,7 +7,7 @@ html(lang='ua').wjs-MobileHeightFix
     link(rel='icon', href='../img/logo.png')
     script(defer src='../libs-js/wScroll.js')
     script(defer src="../js/login.js")
-    title Login
+    //- title Login
   body
     .body-inner.body-inner_notSignedPage
 
