--- a/app/client/scss/login.scss
+++ b/app/client/scss/login.scss
@@ -114,7 +114,7 @@
     height: 100%;
     width: 100%;
     padding: 30px 0;
-    margin-bottom: 450px;
+    // margin-bottom: 450px;
     overflow: hidden;
   }
   h1 {
