--- a/app/client/pug/login.pug
+++ b/app/client/pug/login.pug
@@ -3,11 +3,11 @@ html(lang='ua').wjs-MobileHeightFix
   head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet' type='text/css' href='../css/main.css')
     link(rel='icon', href='../img/logo.png')
-    script(defer src='../libs-js/wScroll.js')
-    script(defer src="../js/login.js")
-    //- title Login
+    //- script(defer src='../libs-js/wScroll.js')
+    //- script(defer src="../js/login.js")
+    title Login
+    link(rel='stylesheet' type='text/css' href='../css/main.css')
   body
     .body-inner.body-inner_notSignedPage
 
@@ -40,7 +40,7 @@ html(lang='ua').wjs-MobileHeightFix
               h5(data-translate="h51") щоб увійти, введіть пароль і логін
               h5(data-translate="h52" style="display: none") щоб почати користуватися чатом, пройдіть реєстрацію
 
-              form(name="loginForm" method="post" action="api/login")
+              form(name="loginForm" method="post" action="api/authorization/login")
                 input(name="lang" type="hidden" value="ua")
                 input(name="name" type="name" placeholder="логін…")
                 .error-info
@@ -65,3 +65,5 @@ html(lang='ua').wjs-MobileHeightFix
                 button(type="submit" data-translate="btn") увійти
 
       footer.login-footer © waldteufel@ukr.net
+    script(src='../libs-js/wScroll.js')
+    script(src="../js/login.js")
