--- a/app/client/pug/login.pug
+++ b/app/client/pug/login.pug
@@ -62,7 +62,7 @@ html(lang='ua').wjs-MobileHeightFix
                   span
                     //- Повторіть пароль
                     //- Паролі не співпадають
-                button(type="submit" data-translate="btn") увійти
+                button#submitBtn(type="submit" data-translate="btn") увійти
 
       footer.login-footer © waldteufel@ukr.net
     script(src='../libs-js/wScroll.js')
