1. npm-run-all 2. ctrl+f5 з авторизацією

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -242,7 +242,7 @@ html.wjs-MobileHeightFix body {
   font: 1.2em reg;
 }
 .header__subheader {
-  font: 1em light;
+  font: 0.8em light;
 }
 .header__search {
   height: 40px;
@@ -1277,6 +1277,11 @@ html.wjs-MobileHeightFix body {
 }
 .list_active {
   display: block;
+}
+
+.list[data-list=startL] p {
+  text-align: center;
+  color: #40E0D0;
 }
 
 .right-side {
