дрібні правки по збірці фронту

--- a/app/templates/notSignedPage/notSignedPage.pug
+++ b/app/templates/notSignedPage/notSignedPage.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en').wjs-MobileHeightFix
+html(lang='ua').wjs-MobileHeightFix
   head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
@@ -8,4 +8,4 @@ html(lang='en').wjs-MobileHeightFix
     script(defer src='../js/main.js')
     title My-cha-cha :)
   body
-    include ../notSignedPage/notSignedPage.pug
+    include ../notSignedPageBody/notSignedPageBody.pug
