--- a/app/templates/popups/popups.pug
+++ b/app/templates/popups/popups.pug
@@ -32,6 +32,7 @@
         i.ico &#x4d;
     .popup__body
       .popup__text.popup__text_tac Ви дійсно хочете видалити обліковий запис?
+      .popup__text.popup__text_tac Ця дія не зворотня.
     .popup__footer
       button(type="submit").popup__btn так
       button(type="button" data-role="resetPopup").popup__btn скасувати
